tests/load/deploy/kubernetes/kustomize/load-cert-overlay/env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsknight-web
  namespace: opsknight
spec:
  template:
    spec:
      containers:
        - name: opsknight-app
          env:
            - name: OPSKNIGHT_LOAD_TEST_ALLOW_HOSTS
              value: "host.docker.internal,10.0.2.2,127.0.0.1,opsknight-emulator"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsknight-critical-worker
  namespace: opsknight
spec:
  template:
    spec:
      containers:
        - name: opsknight-app
          env:
            - name: OPSKNIGHT_LOAD_TEST_ALLOW_HOSTS
              value: "host.docker.internal,10.0.2.2,127.0.0.1,opsknight-emulator"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsknight-general-worker
  namespace: opsknight
spec:
  template:
    spec:
      containers:
        - name: opsknight-app
          env:
            - name: OPSKNIGHT_LOAD_TEST_ALLOW_HOSTS
              value: "host.docker.internal,10.0.2.2,127.0.0.1,opsknight-emulator"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsknight-bulk-worker
  namespace: opsknight
spec:
  template:
    spec:
      containers:
        - name: opsknight-app
          env:
            - name: OPSKNIGHT_LOAD_TEST_ALLOW_HOSTS
              value: "host.docker.internal,10.0.2.2,127.0.0.1,opsknight-emulator"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsknight-scheduler
  namespace: opsknight
spec:
  template:
    spec:
      containers:
        - name: opsknight-app
          env:
            - name: OPSKNIGHT_LOAD_TEST_ALLOW_HOSTS
              value: "host.docker.internal,10.0.2.2,127.0.0.1,opsknight-emulator"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsknight-status-projector
  namespace: opsknight
spec:
  template:
    spec:
      containers:
        - name: opsknight-app
          env:
            - name: OPSKNIGHT_LOAD_TEST_ALLOW_HOSTS
              value: "host.docker.internal,10.0.2.2,127.0.0.1,opsknight-emulator"
